fixed info tab alignemnt issue

--- a/style.css
+++ b/style.css
@@ -90,25 +90,18 @@ button{
 
 .photos{
     display: flex;
-    justify-content: center;
-    gap: 100px;
-    
+    justify-content: space-around;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
 }
 
 .info .photos .photo-1, .photo-2 , .photo-3 , .photo-4{
     width: 200px;
     height: 200px;
-    border: 5px solid red;
     border-radius: 5px;
 }
 
-.info .names{
-    display: flex;
-    justify-content: center;
-    gap: 210px;
-    font-size: 24px;
-    font-weight: 500;
-}
 
 .quote{
     display: flex;
